[package]
name = "lukescript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[dependencies]
phf = { version = "0.11.1", features = ["macros"] }
rdev = "0.5.2"
